@@ -260,7 +260,7 @@ cleanup:
 /**
  * Event log parser thread
  */
-bool LogParser::monitorEventLogV6(CONDITION stopCondition)
+bool LogParser::monitorEventLogV6()
 {
    bool success;
 
@@ -311,7 +311,7 @@ bool LogParser::monitorEventLogV6(CONDITION stopCondition)
 	{
 		nxlog_debug_tag(DEBUG_TAG, 1, _T("Start watching event log \"%s\" (using EvtSubscribe)"), &m_fileName[1]);
 		setStatus(LPS_RUNNING);
-		WaitForSingleObject(stopCondition, INFINITE);
+		WaitForSingleObject(m_stopCondition, INFINITE);
 		nxlog_debug_tag(DEBUG_TAG, 1, _T("Stop watching event log \"%s\" (using EvtSubscribe)"), &m_fileName[1]);
 		_EvtClose(handle);
       success = true;
