@@ -28,6 +28,7 @@
 	NX-1363 (Automatic deployment of agent policies)
 	NX-1364 (Automatically create nodes for unbound agent tunnels)
 	NX-1389 (If library script saved with compilation errors it disappears from script list)
+	NX-1392 (Reload log parser without agent restart)
 	NX-1393 (PostgreSQL deadlock on updating raw_dci_data table)
 
 
